minor fix for hiding vertical overflow

--- a/apps/test-app/app/sandbox.module.css
+++ b/apps/test-app/app/sandbox.module.css
@@ -138,6 +138,7 @@
 	grid-template-rows: subgrid;
 	scrollbar-gutter: stable;
 	overflow-x: auto;
+	overflow-y: hidden;
 }
 
 .tabList {
